tdf#144915 effectively remove limit on number of words in dictionary

this was 2000 entries in the initial checkin, then changed to 30000
(in 2008). Lets makes it effectively unlimited.

Change-Id: Ia757e3283f1ff41d62e6738af9d1f6674ba2fd56
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145916
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>